[gd_scene load_steps=8 format=2]

[ext_resource path="res://recursos/fuentes/Kenney Mini Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://recursos/fuentes/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://recursos/botones/BotonSalirNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://recursos/botones/BotonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://juego/menus/MenuGameOver.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[node name="MenuGameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
menu_inicio = "res://juego/menus/MenuInicio.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -260.0
margin_top = 80.0
margin_right = 260.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.5
margin_top = -59.5
margin_right = 159.5
margin_bottom = 251.5

[node name="BotonReintentar" type="Button" parent="VBoxContainer"]
margin_right = 319.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "Reintentar"

[node name="BotonMenuPrincipal" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 319.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "Menu principal"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 319.0
margin_bottom = 208.0

[node name="BotonSalir" type="Button" parent="VBoxContainer"]
margin_top = 212.0
margin_right = 319.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "Salir"

[connection signal="pressed" from="VBoxContainer/BotonReintentar" to="." method="_on_BotonReintentar_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonMenuPrincipal" to="." method="_on_BotonMenuPrincipal_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonSalir" to="." method="_on_BotonSalir_pressed"]
